--- a/bai1.html
+++ b/bai1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>hôm nay tôi đi hộc được 3 điiểm 10</h1>
+    <h2>sửa đổi là hôm nay tooiu được 32 điểm 9 </h2>
 </body>
 </html>
