--- a/bai1.1.html
+++ b/bai1.1.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hhaha</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>hôm nay tôi đi hộc được 3 điiểm 10</h1>
-    <h2>sửa đổi là hôm nay tooiu được 32 điểm 9 </h2>
+    <h1>sửa đổi kllnmn2 </h1>
 </body>
 </html>
